--- a/GameAdivinhePalavra/index.html
+++ b/GameAdivinhePalavra/index.html
@@ -15,16 +15,20 @@
 
     <section>
         <div id="box-imagem">
-            <img src="assets/menino1.png" id="img-menino" alt="Menino do jogo">
+            <img src="assets/menino1.png" id="img-menino" alt="Menino do jogo"> 
         </div>
+
+        <div id="box-resultado-final" class="hidden">
+                    
+        </div>
+
+            <h3 id="dica-fase" class="hidden"></h3>
+
+        <div id="box-palavra" class="hidden"> <p id="palavra"></p>
+        </div>
+        <div id="box-teclado" class="hidden"> </div>
         <div id="box-iniciar">
             <img src="assets/botao_iniciar.png" id="btn_iniciar" alt="Iniciar" >
-        </div>
-        <div id="box-palavra">
-            <p id="palavra"></p>
-        </div>
-        <div id="box-teclado">
-            
         </div>
 
     </section>
